--- a/coffeepoint.app/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/coffeepoint.app/ClientApp/app/components/navmenu/navmenu.component.html
@@ -7,24 +7,19 @@
                 <span class='icon-bar'></span>
                 <span class='icon-bar'></span>
             </button>
-            <a class='navbar-brand' [routerLink]="['/home']">coffeepoint.app</a>
+            <a class='navbar-brand' [routerLink]="['/fetch-data']">Coffee Point</a>
         </div>
         <div class='clearfix'></div>
         <div class='navbar-collapse collapse'>
             <ul class='nav navbar-nav'>
                 <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/home']">
-                        <span class='glyphicon glyphicon-home'></span> Home
-                    </a>
-                </li>
-                <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/counter']">
-                        <span class='glyphicon glyphicon-education'></span> Counter
-                    </a>
-                </li>
-                <li [routerLinkActive]="['link-active']">
                     <a [routerLink]="['/fetch-data']">
-                        <span class='glyphicon glyphicon-th-list'></span> Fetch data
+                        <span class='glyphicon glyphicon-home'></span> Make coffee!
+                    </a>
+                </li>
+                <li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/admin']">
+                        <span class='glyphicon glyphicon-th-list'></span> Admin
                     </a>
                 </li>
             </ul>
