--- a/coffeepoint.app/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/coffeepoint.app/ClientApp/app/components/navmenu/navmenu.component.html
@@ -13,7 +13,7 @@
         <div class='navbar-collapse collapse'>
             <ul class='nav navbar-nav'>
                 <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/fetch-data']">
+                    <a [routerLink]="['/coffee']">
                         <span class='glyphicon glyphicon-home'></span> Make coffee!
                     </a>
                 </li>
