--- a/coffeepoint.app/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/coffeepoint.app/ClientApp/app/components/navmenu/navmenu.component.html
@@ -7,7 +7,7 @@
                 <span class='icon-bar'></span>
                 <span class='icon-bar'></span>
             </button>
-            <a class='navbar-brand' [routerLink]="['/fetch-data']">Coffee Point</a>
+            <a class='navbar-brand' [routerLink]="['/coffee']">Coffee Point</a>
         </div>
         <div class='clearfix'></div>
         <div class='navbar-collapse collapse'>
