--- a/coffeepoint.app/Views/Shared/_Layout.cshtml
+++ b/coffeepoint.app/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -7,6 +7,13 @@
     <base href="~/" />
 
     <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
+    <style>
+        div.disabled {
+            -ms-opacity: 0.3;
+            opacity: 0.3;
+            pointer-events: none;
+        }
+    </style>
 </head>
 <body>
     @RenderBody()
