--- a/coffeepoint.app/Views/Shared/_Layout.cshtml
+++ b/coffeepoint.app/Views/Shared/_Layout.cshtml
@@ -13,6 +13,10 @@
             opacity: 0.3;
             pointer-events: none;
         }
+        button:disabled {
+            -ms-opacity: 0.3;
+            opacity: 0.3;
+        }
     </style>
 </head>
 <body>
